belajar dom selection part 2

--- a/javascript-DOM/dom-selection/index.html
+++ b/javascript-DOM/dom-selection/index.html
@@ -10,6 +10,9 @@
     <div class="container">
         <button id="tombol">SUBMIT</button>
     </div>
+    <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum velit, doloribus officia optio vel cumque deserunt? A cumque esse, suscipit ullam perspiciatis est nisi aspernatur unde cum, nobis harum! Facilis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates vitae reiciendis inventore illo, numquam veritatis eaque praesentium rem provident earum, autem laboriosam dolor molestiae dicta enim laborum consequuntur quae eum.</p>
     <script src="script.js"></script>
 </body>
 </html>
