mengubah background color menggunakan slider rgb dengan javascript dom

--- a/javascript-DOM/praktik-dom/mengubah-warna/index.html
+++ b/javascript-DOM/praktik-dom/mengubah-warna/index.html
@@ -16,6 +16,14 @@
 <body>
     <h1>Bermain dengan Warna</h1>
     <button id="changeColor">UBAH WARNA BACKGROUND</button>
+    <br><br>
+    <p>Red</p>
+    <input type="range" name="sRed" min="0" max="255"><br>
+    <p>Green</p>
+    <input type="range" name="sGreen" min="0" max="255"><br>
+    <p>Blue</p>
+    <input type="range" name="sBlue" min="0" max="255">
+    <br><br>
     <script src="script.js"></script>
 </body>
 </html>
